# personal-website

./: .gitignore  README.md  app.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
src/: app.py  content.yaml  server.py
src/personal_site/: __init__.py
src/static/css/: style.css  tailwind.css
src/templates/: base.html  index.html  projects.html  resume.html
static/css/: style.css
templates/: about.html  base.html  index.html  projects.html  resume.html
