[project]
name = "personal-site"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "flask>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/personal_site"]

[tool.rye.scripts]
tw = "pnpm exec tailwindcss -i ./static/css/tailwind.css -o ./static/css/style.css -- watch"
